--- a/project/package.json
+++ b/project/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
@@ -73,6 +74,7 @@
     "axios-mock-adapter": "^1.21.2",
     "eslint-config-htmlacademy": "^8.0.0",
     "faker": "^5.5.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "uuid": "^9.0.0"
   }
 }
